# packaging-demo

./: .gitignore  .pre-commit-config.yaml  GITHUB_ACTIONS.md  pyproject.toml  requirements.txt  run.sh  setup.cfg
.github/workflows/: publish.yaml
packaging_demo/: slow.py  states_info.py
tests/: test_slow.py  test_states_info.py
tests/my_folder/: test_my_nested_file.py
