[metadata]
name = packaging-demo
version = 0.0.0
author = Josiah Carberry
author_email = josiah_carberry@brown.edu
description = My package description
long_description = file: README.md
license = MIT
keywords = one, two
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    importlib-metadata; python_version<"3.8"
